# scheme_interpreter

./: .gitignore  .hlint.yaml  hie.yaml  mise.toml  scheme-interpreter.cabal
.github/workflows/: ci.yml
app/: Main.hs
docs/: extension-ideas.md  implementation-plan.md  mini-scheme-spec.md
src/Sample/: Eval.hs  Interpreter.hs  Parser.hs  Printer.hs  Types.hs
src/Scheme/: AST.hs  Analyzer.hs  Builtin.hs  Environment.hs  Evaluator.hs  Interpreter.hs  Macro.hs  Number.hs  Parser.hs  Runtime.hs  SExpr.hs
test/haskell/: SchemeSpecRunner.hs  Spec.hs
test/spec/: README.md  step0-parse-literals.scm  step1-arithmetic.scm  step10-integration.scm  step2-define-lambda.scm  step3-special-forms.scm  step4-let-letrec-do.scm  step5-list-ops.scm  step7-errors.scm  step8-tco.scm
test/spec/core/: step1-arithmetic.scm  step11-target-regressions.scm  step2-define-lambda.scm  step3-special-forms.scm  step4-let-letrec-do.scm  step5-list-ops.scm  step6-string-eq-misc.scm  step7-errors.scm
test/spec/errors/: parse-unexpected-eof.scm  parse-unexpected-token.scm  parse-unterminated-string.scm
test/spec/options/: call-cc.scm  floating-numbers.scm  manual-stress-programs.scm  step11-next-target-programs.scm  step8-tco.scm  step9-macros.scm
test/spec/r5rs/: portable-core.scm
