cabal-version:      3.12
name:               scheme-interpreter
version:            0.1.0.0
license:            NONE
author:             Reo Hitomi
maintainer:         tommyrheo@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common lang
    default-language: GHC2024
    default-extensions:
        StrictData
        OverloadedStrings
    ghc-options:
        -Wall -Wcompat -Widentities
        -Wincomplete-record-updates -Wincomplete-uni-patterns
        -Wmissing-export-lists -Wmissing-home-modules
        -Wpartial-fields -Wredundant-constraints
        -Wmissing-deriving-strategies
        -Wmissing-import-lists
        -funbox-strict-fields

library
    import:           lang
    exposed-modules:  Scheme.SExpr
                    , Scheme.Parser
                    , Sample.Types
                    , Sample.Parser
                    , Sample.Eval
                    , Sample.Printer
                    , Sample.Interpreter
    build-depends:    base >=4.20 && <5
                    , relude ^>=1.2
                    , text
                    , megaparsec ^>=9.7
    mixins:           base hiding (Prelude)
                    , relude (Relude as Prelude)
    hs-source-dirs:   src

executable scheme-interpreter
    import:           lang
    main-is:          Main.hs
    build-depends:    base >=4.20 && <5
                    , scheme-interpreter
                    , relude ^>=1.2
    mixins:           base hiding (Prelude)
                    , relude (Relude as Prelude)
    hs-source-dirs:   app

test-suite scheme-interpreter-test
    import:           lang
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test/haskell
    build-depends:    base >=4.20 && <5
                    , scheme-interpreter
                    , relude ^>=1.2
                    , text
                    , HUnit
    mixins:           base hiding (Prelude)
                    , relude (Relude as Prelude)
